packages/tree-sitter/typedown-yaml/typedown-yaml/test/corpus/mappings/nested.txt
================
Nested mapping
================
addr:
  street: "Main"
  city: "NYC"
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_mapping_value
        (block_mapping_entry
          (property_key
            (identifier))
          (value
            (expression
              (string))))
        (block_mapping_entry
          (property_key
            (identifier))
          (value
            (expression
              (string))))))))

================
Deep nesting
================
_type: schema
properties:
  name:
    type: !type string
  age:
    type: !type number
---

(source_file
  (block_mapping_entry
    (property_key
      (reserved_key))
    (value
      (expression
        (identifier))))
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_mapping_value
        (block_mapping_entry
          (property_key
            (identifier))
          (value
            (block_mapping_value
              (block_mapping_entry
                (property_key
                  (identifier))
                (value
                  (type_value
                    (type_expression
                      (primitive_type))))))))
        (block_mapping_entry
          (property_key
            (identifier))
          (value
            (block_mapping_value
              (block_mapping_entry
                (property_key
                  (identifier))
                (value
                  (type_value
                    (type_expression
                      (primitive_type))))))))))))
