packages/tree-sitter/typedown-yaml/typedown-yaml/test/corpus/mixed/nesting.txt
================
Flow mapping inside block mapping
================
person:
  addr: { street: "Main", city: "NYC" }
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_mapping_value
        (block_mapping_entry
          (property_key
            (identifier))
          (value
            (expression
              (dict_expression
                (dict_entry
                  (identifier)
                  (expression
                    (string)))
                (dict_entry
                  (identifier)
                  (expression
                    (string)))))))))))

================
Flow sequence inside block mapping
================
person:
  tags: [1, 2, 3]
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_mapping_value
        (block_mapping_entry
          (property_key
            (identifier))
          (value
            (expression
              (list_expression
                (expression
                  (number))
                (expression
                  (number))
                (expression
                  (number))))))))))

================
Flow mapping inside block sequence
================
items:
  - { name: "Alice", age: 30 }
  - { name: "Bob", age: 25 }
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (value
            (expression
              (dict_expression
                (dict_entry
                  (identifier)
                  (expression
                    (string)))
                (dict_entry
                  (identifier)
                  (expression
                    (number)))))))
        (block_sequence_entry
          (value
            (expression
              (dict_expression
                (dict_entry
                  (identifier)
                  (expression
                    (string)))
                (dict_entry
                  (identifier)
                  (expression
                    (number)))))))))))

================
Flow sequence inside block sequence
================
matrix:
  - [1, 2]
  - [3, 4]
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (value
            (expression
              (list_expression
                (expression
                  (number))
                (expression
                  (number))))))
        (block_sequence_entry
          (value
            (expression
              (list_expression
                (expression
                  (number))
                (expression
                  (number))))))))))

================
Mapping followed by sequence in top-level mapping
================
name: "Alice"
tags:
  - "one"
  - "two"
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (expression
        (string))))
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (value
            (expression
              (string))))
        (block_sequence_entry
          (value
            (expression
              (string))))))))

================
Sequence followed by mapping in top-level mapping
================
tags:
  - "one"
  - "two"
name: "Alice"
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (value
            (expression
              (string))))
        (block_sequence_entry
          (value
            (expression
              (string)))))))
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (expression
        (string)))))

================
Nested mapping followed by sequence in top-level mapping
================
addr:
  street: "Main"
  city: "NYC"
tags:
  - "one"
  - "two"
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_mapping_value
        (block_mapping_entry
          (property_key
            (identifier))
          (value
            (expression
              (string))))
        (block_mapping_entry
          (property_key
            (identifier))
          (value
            (expression
              (string)))))))
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (value
            (expression
              (string))))
        (block_sequence_entry
          (value
            (expression
              (string))))))))

================
Flow mapping and flow sequence in same block mapping
================
person:
  addr: { street: "Main", city: "NYC" }
  tags: [1, 2, 3]
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_mapping_value
        (block_mapping_entry
          (property_key
            (identifier))
          (value
            (expression
              (dict_expression
                (dict_entry
                  (identifier)
                  (expression
                    (string)))
                (dict_entry
                  (identifier)
                  (expression
                    (string)))))))
        (block_mapping_entry
          (property_key
            (identifier))
          (value
            (expression
              (list_expression
                (expression
                  (number))
                (expression
                  (number))
                (expression
                  (number))))))))))

================
Block sequence with mixed flow values
================
items:
  - [1, 2]
  - { key: "val" }
  - "plain"
---

(source_file
  (block_mapping_entry
    (property_key
      (identifier))
    (value
      (block_sequence_value
        (block_sequence_entry
          (value
            (expression
              (list_expression
                (expression
                  (number))
                (expression
                  (number))))))
        (block_sequence_entry
          (value
            (expression
              (dict_expression
                (dict_entry
                  (identifier)
                  (expression
                    (string)))))))
        (block_sequence_entry
          (value
            (expression
              (string))))))))
